--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div id="menu-btn" class="fas fa-bars"></div>
     <nav class="navbar">
         <a href="#Home">Home</a>
-        <a href="#active">About</a>
+        <a href="#about">About</a>
         <a href="#Features">Features</a>
         <a href="#Banner">Banner</a>
     </nav>
